Fix filter alignment on developer paege

--- a/ElastosBountyProgram/front-end/src/module/page/social/style.scss
+++ b/ElastosBountyProgram/front-end/src/module/page/social/style.scss
@@ -14,6 +14,13 @@
       padding-top: $gap_1;
       text-align: right;
 
+      @media only screen and (max-width: $lg-width) {
+        text-align: left;
+        float: none;
+        width: 100%;
+        padding-bottom: 10px;
+      }
+
       .ant-cascader-picker-label {
         text-align: left;
       }
